--- a/src/App.css
+++ b/src/App.css
@@ -1,188 +1,38 @@
-* {
-  font-family: "Lucida Console";
+.App {
+  text-align: center;
 }
 
-:root {
-  --primary-light: #c2ace4;
-  --primary-dark: #3a255d;
-  --secondary: #ae0038;
-  --neutral-light: #ececec;
-  --neutral-medium: #3d3d3d;
-  --neutral-dark: #151515;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-nav {
-  background-color: var(--primary-light);
-  position: fixed;
-  width: 15vw;
-  height: 90vh;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
   justify-content: center;
-}
-
-header {
-  height: 15vh;
-  background-color: var(--primary-light);
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 24px;
-  gap: 24px;
-}
-
-footer {
-  background-color: #151515;
-  grid-row: 3;
-  grid-column: 1 / 3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 32px;
-}
-
-h6 {
-  margin: 2px;
-  font-size: 12px;
-}
-
-h5 {
-  font-size: 18px;
-  margin: 0;
-  font-weight: normal;
-}
-
-h4 {
-  color: #ececec;
-  font-weight: 100;
-}
-
-h3 {
-  color: var(--neutral-dark);
-  font-size: 20px;
-  font-weight: bold;
-}
-
-button {
-  margin-right: 100px;
-  height: 40px;
-  width: 100px;
-  border-radius: 15%/50%;
-  background-color: var(--primary-dark);
-  color: var(--neutral-light);
-  line-height: 40px;
-  text-align: center;
-  box-shadow: 4px 4px 0 var(--neutral-dark);
-  transition-duration: 0.4s;
-}
-
-button:hover {
-  box-shadow: none;
-  border: 4px solid var(--neutral-light);
-}
-
-.tab {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-  padding: 24px;
-  color: var(--neutral-dark);
-}
-
-.chosen {
-  color: var(--primary-dark);
-  text-decoration: underline;
-}
-
-.logo {
-  font-family: Impact;
-  font-weight: 400;
-  font-size: 32px;
-  background-color: var(--primary-dark);
-  color: var(--neutral-light);
-  border-radius: 8px;
-  padding: 4px 8px;
-}
-
-.searchbar {
-  background-color: var(--neutral-light);
-  width: 480px;
-  height: 40px;
-  border-radius: 5%/50%;
-  border: 4px solid var(--neutral-dark);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 280px;
-}
-
-.pfp {
-  width: 60x;
-  height: 60px;
-  border-radius: 50%;
-  border: solid 4px var(--neutral-dark);
-}
-
-.smallpfp {
-  width: 40px;
-  height: 40px;
-  background-color: #3a255d;
-  border-radius: 50%;
-}
-
-.label {
-  width: 80px;
-  height: 24px;
-  background-color: #543884;
-  border-radius: 5px;
-  text-align: center;
+  font-size: calc(10px + 2vmin);
   color: white;
-  line-height: 24px;
 }
 
-.cards {
-  background-color: white;
-  grid-row: 2;
-  grid-column: 2;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 64px;
-  padding: 64px;
+.App-link {
+  color: #61dafb;
 }
 
-.card {
-  width: 480px;
-  height: 320px;
-  box-shadow: 0 8px 0 #c2ace4;
-  border-radius: 16px;
-  border: 4px #c2ace4 solid;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  padding: 32px;
-  gap: 24px;
-}
-
-.usercard {
-  display: flex;
-  gap: 24px;
-  align-items: center;
-}
-
-.heart {
-  color: #ae0038;
-  text-align: center;
-}
-
-.mutual {
-  color: #3d3d3d;
-}
-
-#bottomright {
-  color: #c2ace4;
-  margin-left: 800px;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
