--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 nav {
   background-color: var(--primary-light);
   position: fixed;
-  width: 15vw;
+  width: 15%;
   height: 90vh;
   display: flex;
   flex-direction: column;
@@ -24,12 +24,14 @@ nav {
 }
 
 header {
-  height: 15vh;
+  height: 15vh;;
+  width: 85%;
+  position: relative;
+  left: 15%;
   background-color: var(--primary-light);
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding-right: 24px;
+  justify-content: center;
   gap: 24px;
 }
 
@@ -46,6 +48,7 @@ footer {
 h6 {
   margin: 2px;
   font-size: 12px;
+  color: var(--neutral-medium);
 }
 
 h5 {
@@ -120,46 +123,48 @@ button:hover {
 }
 
 .pfp {
-  width: 60x;
-  height: 60px;
   border-radius: 50%;
   border: solid 4px var(--neutral-dark);
 }
 
-.smallpfp {
+.small {
   width: 40px;
   height: 40px;
-  background-color: #3a255d;
-  border-radius: 50%;
+}
+
+.large {
+  width: 60x;
+  height: 60px;
 }
 
 .label {
-  width: 80px;
-  height: 24px;
-  background-color: #543884;
-  border-radius: 5px;
+  padding: 4px;
+  height: 16px;
+  background-color: var(--primary-dark);
+  border-radius: 6px;
   text-align: center;
-  color: white;
-  line-height: 24px;
+  color: var(--neutral-light);
+  line-height: 16px;
 }
 
 .cards {
-  background-color: white;
-  grid-row: 2;
-  grid-column: 2;
+  width: 85%;
+  position: relative;
+  left: 15%;
   display: grid;
-  grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
-  gap: 64px;
-  padding: 64px;
+  grid-template-rows: repeat(4, 400px);
+  justify-items: center;
+  align-items: center;
 }
 
 .card {
-  width: 480px;
-  height: 320px;
-  box-shadow: 0 8px 0 #c2ace4;
+  width: 80%;
+  height: 60%;
+  box-shadow: 0 8px 0 var(--primary-light);
   border-radius: 16px;
-  border: 4px #c2ace4 solid;
+  border: 4px var(--primary-light) solid;
+  background-color: white;
   justify-content: center;
   display: flex;
   flex-direction: column;
@@ -167,19 +172,15 @@ button:hover {
   gap: 24px;
 }
 
-.usercard {
+.cardlayout {
   display: flex;
   gap: 24px;
   align-items: center;
 }
 
-.heart {
-  color: #ae0038;
-  text-align: center;
-}
-
-.mutual {
-  color: #3d3d3d;
+.save {
+  width: 40px;
+  color: var(--secondary);
 }
 
 #bottomright {
