--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,8 @@ header {
 }
 
 footer {
-  background-color: #151515;
-  grid-row: 3;
-  grid-column: 1 / 3;
+  height: 10vh;
+  background-color: var(--neutral-dark);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,7 +57,7 @@ h5 {
 }
 
 h4 {
-  color: #ececec;
+  color: var(--neutral-light);
   font-weight: 100;
 }
 
