--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,9 @@ button {
 
 button:hover {
   box-shadow: none;
-  border: 4px solid var(--neutral-light);
+  background-color: var(--neutral-light);
+  color: var(--primary-dark);
+  border: 4px solid var(--neutral-dark);
 }
 
 /* each of the tab on the navigation bar */
@@ -129,18 +131,15 @@ button:hover {
 .pfp {
   border-radius: 50%;
   border: solid 4px var(--neutral-dark);
+  object-fit: cover;
+  width: 60px;
+  height: 60px;
 }
 
 /* small profile pictures for mutual connections shown on user cards */
 .small {
   width: 40px;
   height: 40px;
-}
-
-/* large profile pictures for the viewer's information display on the header and other users' profile on the cards */
-.large {
-  width: 60x;
-  height: 60px;
 }
 
 /* labels on user cards to display what they like to do or want to talk about */
@@ -161,7 +160,8 @@ button:hover {
   left: 15%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(4, 400px);
+  grid-auto-rows: 400px;
+  min-height: 75vh;
   justify-items: center;
   align-items: center;
 }
